# capsule

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  logo.txt
.agents/: capsule-agent.md
.agents/prompts/: backend.md  cli.md  frontend.md  infra.md
.claude/: CLAUDE.md  launch.json  settings.json
.claude/commands/: build.md  deploy.md  test.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  sprint_task.md  tech_debt.md
.github/workflows/: ci.yml  release.yml
demos/bedrock-ai/: README.md  chat.go
demos/deploy-lambda-node/: .capsule.json  index.js  package.json
demos/deploy-nextjs/: .capsule.json  Dockerfile  package.json
demos/deploy-nextjs-lambda/: .capsule.json  lambda-handler.js
demos/deploy-nextjs-serverless/: .capsule.json  Dockerfile  package.json
demos/deploy-normal/: .capsule.json  Dockerfile  README.md  main.go
demos/deploy-serverless/: README.md  index.js
demos/deploy-serverless-fastapi/: Dockerfile  README.md  main.py  pyproject.toml
demos/deploy-static/: .capsule.json  package.json
demos/mailing/: README.md  send.go
deploy/: README.md
deploy/terraform/: .gitignore  alb.tf  ec2.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  user_data.sh  (+3 more)
docs/: EDD.md  ENHANCED_FEATURES.md  FEATURES.md  MEMORY.md  PRD.md  SELF_HOSTING.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
(+69 files in other folders)
