[project]
name = "capsule-serverless-fastapi"
version = "1.0.0"
description = "A FastAPI serverless project packaged with uv and mangum"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "mangum>=0.17.0",
    "pydantic>=2.6.0",
    "uvicorn>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
